poprawki, nawigacja: start, input-wyswietlanie, dodanie warunku wpisania e-maila

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     </section>
     <section id="singup" class="section">
         <div class="signup">
-            <form action="http://tools.is-academy.pl/mailer.php" method="post" >
+            <form action="http://tools.is-academy.pl/mailer.php" method="post">
                 <p class="singup-title">
                     Obiecujemy skontaktować się z tobą tylko RAZ!:
                 </p>
                 <p>Zostaw swoj email, a powiadomimy Cie o premierze naszej aplikacji</p>
-                <input class="<div>" type="email" placeholder="Twój email...." name="email">
+                <input class="input-email" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" id="myBtn" type="submit" value="Wyślij">
             </form><br>
