dodanie sceny koncowej, poprawki

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>Sugero.pl</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="script/game1.css">
+    <!--<link rel="stylesheet" href="styles/game.css">-->
     <link rel="stylesheet" href="styles/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin-ext" rel="stylesheet">
 </head>
@@ -121,6 +121,10 @@
                     <h3 id="timer"></h3>
                     <h3 id="game-score">Punkty: 0</h3>
                 </div>
+                <div id="game-end">
+                    <h1 id="game-end-title">Koniec gry! </h1>
+                    <h2 id="game-end-score">Zdobyte punkty: </h2>
+                </div>
             </div>
         </div>
     </section>
@@ -129,9 +133,9 @@
     <section id="team" class="section">
         <header class="team-header">Zespół</header>
         <p class="team-title">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Inventore maxime corporis similique, tempore tenetur ipsum
-            eligendi animi illo deleniti voluptatum.
+            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+            <!--Inventore maxime corporis similique, tempore tenetur ipsum-->
+            <!--eligendi animi illo deleniti voluptatum.-->
         </p>
         <div id="team-section">
             <div class="team-members">
