struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish      FINISH

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Nie ruszając się z domu.
         </p>
         <p>
-            To nigdy nie było to takie proste!
+            To nigdy nie było takie proste!
         </p>
         <a href="#singup" style="text-decoration: none;">
             <div id="subscribe">Dowiedz się więcej</div>
