poskładanie tego do kupy

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="floating-clear"></li>
         </ul>
     </nav>
-    <div id="slideShow">
+    <div id="slideShow" class="section">
         <div class="slider">
             <img class="slide" id="slide_1" src="images/slajdy/slide_1.png"/>
             <img class="slide" id="slide_2" src="images/slajdy/slide_2.jpg"/>
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div id="intro" class="section">
+    <div id="intro">
         <div class="logo">
             <img class="logo" src="images/background/logo31.png" alt="logo">
         </div>
