struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish      FINISH      overflow - hidden

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <li class="floating-clear"></li>
         </ul>
     </nav>
-    <div id="slideShow" class="section">
+    <div id="slideShow">
         <div class="slider">
             <img class="slide" id="slide_1" src="images/slajdy/slide_1.png"/>
-            <img class="slide" id="slide_2" src="images/slajdy/slide_2.jpg"/>
-            <img class="slide" id="slide_3" src="images/slajdy/slide_3.jpg"/>
+            <img class="slide" id="slide_2" src="images/slajdy/slide_2.png"/>
+            <img class="slide" id="slide_3" src="images/slajdy/slide_3.png"/>
             <img class="slide" id="slide_4" src="images/slajdy/slide_4.png"/>
             <img class="slide" id="slide_5" src="images/slajdy/slide_5.png"/>
         </div>
